<resources>
    <string name="app_name">WildWanderer</string>
    <string name="home_page">WildWanderer</string>
    <string name="map_button">map</string>
    <string name="recent_button">Recent Sightings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome back "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="submit_sighting">Submit Sighting</string>
    <string name="submit_finding">Submit Finding</string>
    <string name="account">Account</string>
    <string name="facebook_app_id">791326969311806</string>
    <string name="social_media_submit_button">Post submission to facebook</string>
</resources>