<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.516"/>
    <ImageView
            android:layout_width="235dp"
            android:layout_height="336dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.129"/>
    <Button
            android:text="@string/map_button"
            android:onClick="openMap"
            android:layout_width="182dp"
            android:layout_height="50dp" android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.493"
            android:backgroundTint="@color/green" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.591"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button android:text="@string/recent_button"
            android:onClick="openRecent"
            android:layout_width="183dp"
            android:layout_height="52dp"
            android:id="@+id/sightings_button"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/green"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.713"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button android:text="@string/action_sign_in_short"
            android:layout_height="52dp"
            android:layout_width="183dp"
            android:id="@+id/login_button"
            android:onClick="openLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.966"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.495"/>
    <Button
            android:text="@string/account"
            android:onClick="openAccount"
            android:visibility="invisible"
            android:layout_width="183dp"
            android:layout_height="52dp" android:id="@+id/account_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.843" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.495"/>
    <Button
            android:text="@string/logout"
            android:visibility="invisible"
            android:onClick="logout"
            android:layout_width="183dp"
            android:layout_height="52dp" android:id="@+id/logout_button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.966"
            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/register"
            android:onClick="openRegister"
            android:layout_width="183dp"
            android:layout_height="52dp" android:id="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.843" app:layout_constraintHorizontal_bias="0.495"/>


</androidx.constraintlayout.widget.ConstraintLayout>